--- a/index.html
+++ b/index.html
@@ -6,11 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farzana Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+
+
+    <link href="https://fonts.googleapis.com/css2?family=Pushster&display=swap" rel="stylesheet">
+
+
+    <!--  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Pushster&display=swap" rel="stylesheet">
+    <!--  -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
 </body>
+
+<section class="header-top-banner">
+    <div class="box-width">
+        <h1>Welcome To</h1>
+        <h1> <span class="span-name-color">Farzana Hossain</span> World</h1>
+
+        <h2> Full Stack web Developer and System Analyst</h2>
+
+        <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.
+        </p>
+
+        <a class="hire-me-button" target="_blank" href="">HIRE ME</a>
+    </div>
+
+    <div class="box-width">
+        <img src="images/our-pic.png" alt="">
+    </div>
+</section>
+
+
+
+
 
 </html>
