second section done

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
 
         <h2> Full Stack web Developer and System Analyst</h2>
 
-        <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.
+        <p>Welcome to my Portfolio. This is the first static site i build in my course journey. It's been only 3 days my course has been started. It's just the beginnig. I am and mastering web development. I will not stop until I become the FUll Stack Developer
+            Web Development Hero.
         </p>
 
-        <a class="hire-me-button" target="_blank" href="">HIRE ME</a>
+        <a class="button-design" target="_blank" href="">HIRE ME</a>
     </div>
 
     <div class="box-width">
@@ -46,7 +47,20 @@
 </section>
 
 
+<section class="dream-big-banner">
+    <div class="box-width">
+        <img src="images/our-pic2.png" alt="Pink Pic">
+    </div>
+
+    <div class="box-width">
+        <h2>Dream Big</h2>
+        <h3>Become a Full Stack Developer</h3>
+        <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+
+        <a class="button-design" href=""> <span>DOWNLOAD RESUME</span></a>
+    </div>
 
 
+</section>
 
 </html>
