--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Pushster&display=swap" rel="stylesheet">
     <!--  -->
+
+
+    <!-- footer font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Pushster&display=swap" rel="stylesheet">
+    <!--  -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -42,14 +49,14 @@
     </div>
 
     <div class="box-width">
-        <img src="images/our-pic.png" alt="">
+        <img src="images/girl.png" alt="">
     </div>
 </section>
 
 
 <section class="dream-big-banner">
     <div class="box-width">
-        <img src="images/our-pic2.png" alt="Pink Pic">
+        <img src="images/ship-gif.gif" alt="Pink Pic">
     </div>
 
     <div class="box-width">
@@ -60,7 +67,46 @@
         <a class="button-design" href=""> <span>DOWNLOAD RESUME</span></a>
     </div>
 
+</section>
+
+
+<!-- 3rd section -->
+<section class="third-section-experiences">
+
+    <div>
+        <h2>Experiences</h2>
+    </div>
+
+
+
+    <div class="two-box ">
+        <div class="box-width dev-box">
+            <h2>Full Stack Web Developer</h2>
+            <h3> <span class="span-name-color">2021-Present | Pro Level Developer</span></h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server
+                and security. I will give you 100% web solution.</p>
+        </div>
+
+        <div class="box-width dev-box">
+            <h2>System Analyst</h2>
+            <h3><span class="span-name-color">2021-2022 | IT Executive - System Analyst</span>
+            </h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+
+    </div>
 
 </section>
+
+<!-- end of 3rd section -->
+
+
+<!-- footer -->
+
+
+<footer>
+    <p>Copyright @2022 "Farzana Hossain" All rights reserved.</p>
+</footer>
+
 
 </html>
