final touch with border linear gradient

--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
 
 
     <div class="two-box ">
-        <div class="box-width dev-box">
+        <div class="box-width dev-box" id="full-dev">
             <h2>Full Stack Web Developer</h2>
             <h3> <span class="span-name-color">2021-Present | Pro Level Developer</span></h3>
             <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server
                 and security. I will give you 100% web solution.</p>
         </div>
 
-        <div class="box-width dev-box">
+        <div class="box-width dev-box" id="system-ana">
             <h2>System Analyst</h2>
             <h3><span class="span-name-color">2021-2022 | IT Executive - System Analyst</span>
             </h3>
