changed padding and add linkdin

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Farzana Portfolio</title>
+    <title>Developer Farzana | Portfolio</title>
+    <link rel="shortcut icon" href="images/images.jpeg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
 
 
     <link href="https://fonts.googleapis.com/css2?family=Pushster&display=swap" rel="stylesheet">
@@ -20,7 +20,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Pushster&display=swap" rel="stylesheet">
     <!--  -->
-
 
     <!-- footer font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,7 +44,7 @@
             Web Development Hero.
         </p>
 
-        <a class="button-design" target="_blank" href="">HIRE ME</a>
+        <a class="button-design" target="_blank" href="https://www.linkedin.com/in/farzana-hossain-359048a9/">HIRE ME</a>
     </div>
 
     <div class="box-width">
@@ -64,7 +63,7 @@
         <h3>Become a Full Stack Developer</h3>
         <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
 
-        <a class="button-design" href=""> <span>DOWNLOAD RESUME</span></a>
+        <a class="button-design" target="_blank" href="https://www.linkedin.com/in/farzana-hossain-359048a9/"> <span>DOWNLOAD RESUME</span></a>
     </div>
 
 </section>
